@@ -19,6 +19,8 @@ o Updated copyright notice to GPLv2 only, received explicit approval from both
 o Updated the README
 o Add libnl v 1.0-pre8 compatible code and make it the default (needed for
   Fedora Rawhide post F8)
+o Renamed the CIPSOv4 'std' mapping to 'trans' to better reflect it's usage,
+  'std' still works but is marked as deprecated
 
 * Release 0.17 (September 28, 2006)
 ------------------------------------------------------------------------------
